--- a/NoSQL Code/socialAppFrontend/src/css/PostCard.css
+++ b/NoSQL Code/socialAppFrontend/src/css/PostCard.css
@@ -103,3 +103,55 @@
   color: white;
   cursor: pointer;
 }
+
+/*estilos para los botones*/
+.comment-actions button,
+.add-comment button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 0.9rem;
+  margin-right: 5px;
+}
+
+.comment-actions button:hover,
+.add-comment button:hover {
+  background-color: #0056b3;
+}
+
+/* Botón de Eliminar */
+.comment-actions button:nth-child(2) {
+  background-color: #dc3545;
+}
+
+.comment-actions button:nth-child(2):hover {
+  background-color: #a71d2a;
+}
+
+/* Botón de Guardar */
+.comment-actions button.save-button {
+  background-color: #28a745;
+}
+
+.comment-actions button.save-button:hover {
+  background-color: #1e7e34;
+}
+
+/* Botón de Cancelar */
+.comment-actions button.cancel-button {
+  background-color: #6c757d;
+}
+
+.comment-actions button.cancel-button:hover {
+  background-color: #5a6268;
+}
+
+/* Botones alineados */
+.comment-actions {
+  margin-top: 5px;
+  display: flex;
+  gap: 10px;
+}
