--- a/NoSQL Code/socialAppFrontend/src/css/Sidebar.css
+++ b/NoSQL Code/socialAppFrontend/src/css/Sidebar.css
@@ -187,6 +187,34 @@
   .sidebar::-webkit-scrollbar-thumb:hover {
     background: #b0bec5;
   }
+
+  .followers-following {
+    margin-top: 10px;
+    font-size: 0.9rem;
+  }
+  
+  .followers-following p {
+    margin: 5px 0;
+  }
+  
+  .followers-section {
+    margin-top: 20px;
+  }
+  
+  .followers-section h3 {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+  
+  .followers-list {
+    list-style: none;
+    padding: 0;
+    font-size: 0.9rem;
+  }
+  
+  .followers-list li {
+    margin-bottom: 5px;
+  }
   
   /* Media queries */
   @media (max-width: 768px) {
